# binarization

./: .gitignore  CMakeLists.txt  Readme.md  build.sh  log  main.cpp
algorithms/: BradleyAlgorithm.cpp  BradleyAlgorithm.h  BradleyBinarisationAlgorithm.h  IAlgorithm.h
image/: Image.h
